...
                uiState.name = it
                isButtonEnabled.value = isNameValid(it)
            },
            modifier = Modifier
                .fillMaxWidth()
                .padding(8.dp)
                .testTag("NameInputField")
        )
        Button(
            onClick = {
                viewModel.setName("$nameOfShouter")
                navController.navigate("chat/$nameOfShouter"){
                    popUpTo("screen1") { inclusive = true }
                }
            },
            enabled = isButtonEnabled.value,
            modifier = Modifier
                .testTag("ShoutButton")
                .align(Alignment.CenterHorizontally)
        ) {
            Text("Shout")
        }

        //Text("Your location is  ${currentLocation.latitude}/${currentLocation.longitude}")
...
